--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "vue": "^2.5.2",
     "vue-i18n": "^8.11.2",
     "vue-router": "^3.0.1",
+    "vue-scroll": "^2.1.12",
     "vue-scroller": "^2.2.4",
     "vue-video-player": "^5.0.2",
     "weixin-js-sdk": "^1.4.0-test"
